--- a/app/javascripts/components/watchSlot/watchSlot.scss
+++ b/app/javascripts/components/watchSlot/watchSlot.scss
@@ -49,7 +49,7 @@ $header-height: 80px;
       width: 140px;
       height: 50px;
       line-height: 50px;
-      background-color: #6257da;
+      background-color: #fd635e;
       border-radius: 50px;
       font-size: 16px;
       color: #fff;
@@ -58,7 +58,7 @@ $header-height: 80px;
       cursor: pointer;
 
       &:last-child {
-        background-color: #41bed5;
+        background-color: #6257da;
       }
     }
   }
